--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -14,6 +14,7 @@ jobs:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     with:
+      required_approving_review_count: 0
       repo_config: true
       repo_description: "CloudFormation templates to deploy black.box Unzoner backends."
       repo_homepage: "belodetek.io"
