--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,14 @@
 - commits:
+    - subject: Unzoner 2023 updates
+      hash: c57ba1e51f34963225cc6d64112803e7857de091
+      body: ""
+      footer:
+        change-type: patch
+      author: belodetek
+  version: 0.0.4
+  title: ""
+  date: 2023-04-23T01:35:36.060Z
+- commits:
     - subject: "docs: update"
       hash: 7d9164063d2635ef8d1eda384b214a7aa05a87be
       body: ""
