--- a/main-template.yml
+++ b/main-template.yml
@@ -167,7 +167,7 @@ Parameters:
     - t4g.large
   InstanceSizeSpot:
     Type: String
-    Default: t4g.nano
+    Default: t4g.micro
     AllowedValues:
     - t2.micro
     - t3.micro
