--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,14 @@
 - commits:
+    - subject: change defult instance size
+      hash: 93c7f03e6689690da5d180716a9511e648cb4f5b
+      body: ""
+      footer:
+        change-type: patch
+      author: belodetek
+  version: 0.0.5
+  title: ""
+  date: 2023-04-23T17:37:56.612Z
+- commits:
     - subject: Unzoner 2023 updates
       hash: c57ba1e51f34963225cc6d64112803e7857de091
       body: ""
